fixed typography choices

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url(https://fonts.adobe.com/fonts/proxima-nova);
-@import url(https://fonts.adobe.com/fonts/sofia);
+/* https://mui.com/api/typography/#css */
 
 * {
     /* Color variables */
@@ -32,36 +31,6 @@ body {
   background-color: var(--backgroundColor);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-.MuiTypography-h1 {
-  font-family: 'Sofia Pro Soft Medium', 'Helvetica', 'Arial', sans-serif;
-  font-size: 45pt;
-}
-
-.MuiTypography-h2 {
-  font-family: 'Sofia Pro Soft Meduim', 'Helvetica', 'Arial', sans-serif;
-  font-size: 28pt;
-}
-
-.MuiTypography-h3 {
-  font-family: 'Sofia Pro Soft Regular', 'Helvetica', 'Arial', sans-serif;
-  font-size: 24pt;
-}
-
-.MuiTypography-h4 {
-  font-family: 'Sofia Pro Soft Regular', 'Helvetica', 'Arial', sans-serif;
-  font-size: 20pt;
-}
-
-.MuiTypography-body1, .MuiTypography-paragraph {
-  font-family: 'Proxima Nova', 'Helvetica', 'Arial', sans-serif;
-  font-size: 14pt;
-}
-
-.MuiTypography-caption {
-  font-family: 'Proxima Nova', 'Helvetica', 'Arial', sans-serif;
-  font-size: 11pt;
 }
 
 code {
