--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ code {
 }
 
 .selfManagementCategory {
-  background-color: var(--hippoPurple);
+  background-color: var(--lightHippoPurple);
 }
 
 .categoryPageButton {
