--- a/src/index.css
+++ b/src/index.css
@@ -96,3 +96,14 @@ code {
   color: var(--darkTigerRed);
 }
 
+.chip {
+  font-family: 'Sofia Pro Soft Regular';
+  font-size: 11;
+  padding: 7px;
+  margin: 10px;
+  border-radius: 20px;
+  box-shadow: 0px 2px 4px #999999;
+  float:left; 
+  display:inline;
+}
+
