--- a/src/index.css
+++ b/src/index.css
@@ -97,8 +97,8 @@ code {
 }
 
 .chip {
-  font-family: 'Sofia Pro Soft Regular';
-  font-size: 11;
+  font-family: 'Proxima Nova';
+  font-size: 11pt;
   padding: 7px;
   margin: 10px;
   border-radius: 20px;
