--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,7 @@ code {
   border-radius: 5px;
   box-shadow: 0px 2px 4px #999999;
   color: var(--textColor);
+  align-items: center;
 }
 
 .activityPageButton {
@@ -105,5 +106,6 @@ code {
   box-shadow: 0px 2px 4px #999999;
   float:left; 
   display:inline;
+  align-items: center;
 }
 
