added all category chips

--- a/src/index.css
+++ b/src/index.css
@@ -52,22 +52,27 @@ code {
 
 .responsibleDecisionMakingCategory {
   background-color: var(--turtleGreen);
+  min-width: 300px;
 }
 
 .selfAwarenessCategory {
   background-color: var(--dolphinBlue);
+  min-width: 300px;
 }
 
 .socialAwarenessCategory {
   background-color: var(--giraffeYellow);
+  min-width: 300px;
 }
 
 .relationshipSkillsCategory {
   background-color: var(--tigerRed);
+  min-width: 300px;
 }
 
 .selfManagementCategory {
   background-color: var(--lightHippoPurple);
+  min-width: 300px;
 }
 
 .categoryPageButton {
